--- a/adjusted_mutual_information_tcp.ipynb
+++ b/adjusted_mutual_information_tcp.ipynb
@@ -3430,12 +3430,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 42,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'AMI_values' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-42-f41f8125c2bb>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'data.json'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'w'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mjson_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdump\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mAMI_values\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mjson_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'AMI_values' is not defined"
+     ]
+    }
+   ],
    "source": [
     "with open('data.json', 'w') as json_file:\n",
-    "  json.dump(AMI_values, json_file)"
+    "    json.dump(AMI_values, json_file)"
    ]
   },
   {
@@ -3489,7 +3501,48 @@
     "7 2 <br/>\n",
     "8 Urgent pointer: 141 <br/>\n",
     "\n",
-    "The urgent pointer inside the are clearly the "
+    "The urgent pointer inside the DDoS attack is the most iportant feature. If we remove this feature we'll see that the TCP flags become the most important feature."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1\n",
+      "1 0\n",
+      "2 0\n",
+      "3 0\n",
+      "4 1\n",
+      "5 27\n",
+      "6 241\n",
+      "7 2\n",
+      "8 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import numpy as np\n",
+    "import operator\n",
+    "with open('tcp_data.json') as json_file:  \n",
+    "    data = json.load(json_file)\n",
+    "\n",
+    "l = []\n",
+    "for p in data:\n",
+    "    array = np.array(data[p])\n",
+    "    i = array.argmax()\n",
+    "    if i == 8:\n",
+    "        array = np.delete(array,i)\n",
+    "    i = array.argmax()\n",
+    "    l.append(i)\n",
+    "\n",
+    "for i in range(0,9):\n",
+    "    print(i,l.count(i))"
    ]
   },
   {
